--- a/src/components/blocks/footer-1.astro
+++ b/src/components/blocks/footer-1.astro
@@ -41,7 +41,7 @@ const { logo, description, links, socials, menus } = Astro.props
 ---
 
 <Footer>
-  <FooterSplit class="@5xl:grid-cols-[1fr_3fr]">
+  <FooterSplit class="lg:grid-cols-[1fr_3fr]">
     <FooterGroup>
       <Logo href={logo?.href || "/"}>
         <LogoImage src={logo?.src} alt={logo?.alt} />
@@ -72,7 +72,7 @@ const { logo, description, links, socials, menus } = Astro.props
         }
       </FooterMenu>
     </FooterGroup>
-    <FooterGrid class="@5xl:justify-end">
+    <FooterGrid class="lg:justify-end">
       {
         menus?.map((menu) => (
           <FooterGroup>
