--- a/src/components/ui/footer/footer-spread.astro
+++ b/src/components/ui/footer/footer-spread.astro
@@ -14,7 +14,7 @@ const slot = await Astro.slots.render("default")
   slot?.trim().length > 0 && (
     <div
       class={cn(
-        "flex w-full flex-col items-start gap-8 @5xl:flex-row @5xl:justify-between",
+        "flex w-full flex-col items-start gap-8 lg:flex-row lg:justify-between",
         className
       )}
       {...props}
