--- a/src/components/ui/navigation-menu/navigation-menu-sub.astro
+++ b/src/components/ui/navigation-menu/navigation-menu-sub.astro
@@ -14,7 +14,7 @@ const slot = await Astro.slots.render("default")
   slot?.trim().length > 0 && (
     <ul
       data-slot="navigation-menu-sub"
-      class={cn("flex min-w-[200px] flex-col gap-2", className)}
+      class={cn("flex min-w-50 flex-col gap-2", className)}
       {...props}
     >
       <Fragment set:html={slot} />
