--- a/src/components/ui/navigation-menu/navigation-menu-trigger.astro
+++ b/src/components/ui/navigation-menu/navigation-menu-trigger.astro
@@ -26,7 +26,7 @@ const Comp = href ? "a" : "button"
       {...props}
     >
       <Fragment set:html={slot} />
-      <ChevronDown class="relative top-[1px] ml-1 size-3 transition-transform duration-300 group-focus-within/navigation-menu-item:rotate-180 group-hover/navigation-menu-item:rotate-180" />
+      <ChevronDown class="relative top-px ml-1 size-3 transition-transform duration-300 group-focus-within/navigation-menu-item:rotate-180 group-hover/navigation-menu-item:rotate-180" />
     </Comp>
   )
 }
