--- a/src/components/ui/sidebar/sidebar-menu-button.astro
+++ b/src/components/ui/sidebar/sidebar-menu-button.astro
@@ -11,7 +11,7 @@ const variants = cva(
       variant: {
         default: "hover:bg-accent hover:text-accent-foreground text-foreground",
         outline:
-          "bg-background hover:bg-accent hover:text-accent-foreground shadow-[0_0_0_1px_hsl(var(--border))] hover:shadow-[0_0_0_1px_hsl(var(--accent))]",
+          "bg-background border border-border hover:border-accent",
       },
       size: {
         default: "h-8 text-sm",
