--- a/src/components/ui/table/table-cell.astro
+++ b/src/components/ui/table/table-cell.astro
@@ -1,21 +1,20 @@
 ---
-import type { HTMLAttributes } from "astro/types"
+import type { HTMLAttributes } from "astro/types";
 
-import { cn } from "@/lib/utils"
+import { cn } from "@/lib/utils";
 
 interface Props extends HTMLAttributes<"td"> {}
 
-const { class: className, ...props } = Astro.props
+const { class: className, ...props } = Astro.props;
 ---
 
 <td
   data-slot="table-cell"
   class={cn(
-    "p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]",
+    "p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5",
     className
   )}
   {...props}
 >
   <slot />
 </td>
-
