--- a/src/components/ui/tile/tile-spread.astro
+++ b/src/components/ui/tile/tile-spread.astro
@@ -14,7 +14,7 @@ const slot = await Astro.slots.render("default")
   slot?.trim().length > 0 && (
     <div
       class={cn(
-        "flex w-full flex-row items-start justify-between gap-4 @max-xs:flex-col",
+        "flex w-full flex-col items-start justify-between gap-4 sm:flex-row",
         className
       )}
       {...props}
